# NHL-Yard-Sale

./: .gitignore  README.md  check_duplicates.py  check_impact.py  diagnose_scd.py  fix_all_issues.py  fix_properly.py  fix_state_mismatch.py  pyproject.toml  requirements.txt  run_pipeline.py  verify_data.py  verify_schema.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  feature.yml  task.yml  user_story.yml
config/: pipeline.yml  teams.txt
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/marts/: dim_player.sql  dim_team.sql  schema.yml
dbt/models/staging/: stg_rosters.sql
migrations/: 002_cleanup_duplicate_columns.py
src/: __init__.py  config.py
src/extract/: __init__.py  client.py  roster_api.py
src/load/: __init__.py  bronze.py  duckdb_loader.py
src/state/: __init__.py  state_manager.py
src/utils/: __init__.py  logging.py
