[project]
name = "nhl-ops-data-platform"
version = "0.1.0"
description = "Production NHL data engineering pipeline"
requires-python = ">=3.12"
dependencies = [
    "requests==2.32.5",
    "beautifulsoup4==4.13.5",
    "pandas==2.3.1",
    "duckdb==1.4.1",
    "pyarrow==21.0.0",
    "python-dotenv==1.1.1",
    "dbt-duckdb==1.9.4",
]

[project.scripts]
nhl-pipeline = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]